--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "netlify-cli": "^3.10.6",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
